# mouse

./: KVM_PLAN.md  README.md  pubspec.yaml
.github/workflows/: windows_build.yml
integration_test/: simple_test.dart
lib/: main.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: capture.dart  injection.dart  network.dart  orchestrator.dart  simple.dart  simple.freezed.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: mod.rs  orchestrator.rs  simple.rs
rust/src/logic/: capture.rs  injection.rs  mod.rs  network.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_mouse.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_mouse.podspec
rust_builder/windows/: CMakeLists.txt
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc
