[package]
name = "rust_lib_mouse"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
flutter_rust_bridge = "=2.8.0"
lazy_static = "1.5.0"
rdev = "0.5.3"
serde = { version = "1.0.228", features = ["derive"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
